--- a/css/register.css
+++ b/css/register.css
@@ -1,6 +1,7 @@
 .errorMessage {
 	color: red;
 	font-size: 10px;
+	font-family: Avenir, sans-serif;
 }
 
 .hiddenElement {
@@ -12,5 +13,10 @@
     border: 2px solid red;
     padding: 20px; 
     width: 200px;
-    height: 15px;    
+    height: 15px;
+   	font-family: Avenir, sans-serif;
+}
+
+body {
+    font-family: Avenir, sans-serif;
 }
