Fixed styles and edit functionality

--- a/css/register.css
+++ b/css/register.css
@@ -1,22 +1,29 @@
-.errorMessage {
-	color: red;
-	font-size: 10px;
-	font-family: Avenir, sans-serif;
-}
-
-.hiddenElement {
-	display: none;
-}
-
-.inputTexts {
-    border-radius: 25px;
-    border: 2px solid red;
-    padding: 20px; 
-    width: 200px;
-    height: 15px;
-   	font-family: Avenir, sans-serif;
-}
-
 body {
     font-family: Avenir, sans-serif;
+}
+
+#groupSelector {
+    font-family: Avenir, sans-serif;
+}
+
+::placeholder {
+    font-family: Avenir, sans-serif;
+}
+
+#goBackButton {
+	position: absolute;
+	right: 10px;
+	top: 5px;
+}
+
+.parentDiv {
+   display: table;
+   width: 100%;
+}
+
+#registerData {
+	padding-top: 30px;
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
 }
